hard-gists/3295631/run.log
=== Docker Run Log for 3295631 ===
Started at: Mi 29. Okt 13:48:05 CET 2025

[2025-10-29 13:48:05] START: Running container for 3295631
[2025-10-29 13:48:06] SUCCESS: Container 49a46d3326e773c2b7e879f02f136b53ec91aed09e06ea7f7446b7d99eb3e540 started for 3295631
=== Container logs for 3295631 ===
  File "/snippet.py", line 67
    print cen_dx, cen_dy,
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3295631 ===
[2025-10-29 13:48:08] INFO: Container 49a46d3326e773c2b7e879f02f136b53ec91aed09e06ea7f7446b7d99eb3e540 has stopped
